# audio-llm-test

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SAFETY_RISK_EXECUTIVE_SUMMARY.md  TECHNICAL_SPEC.md  USER_GUIDE.md  alembic.ini  deploy.sh  docker-compose.yml  pyproject.toml  run_test.py  setup.sh  start.sh
.claude/: launch.json
alembic/: env.py
alembic/versions/: 001_initial.py  002_add_metrics.py  002_add_metrics_columns.py  003_add_degraded_audio_path.py  004_add_cars.py  005_add_interferer_level.py  006_add_telephony_params.py  007_rename_snr_to_noise_level.py  008_add_far_end_and_doubletalk.py  009_add_prompts.py
backend/app/: config.py  main.py
deploy/: deploy.sh  deploying.html  nginx-changes.md  nginx-proxy-params.conf
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/.claude/: launch.json
frontend/src/: App.tsx  main.tsx
pipeline-studio/: pyproject.toml
pipeline-studio/backend/: app.py  config.py
pipeline-studio/backend/api/: pipelines.py
pipeline-studio/backend/engine/: graph_executor.py  node_registry.py  templates.py
pipeline-studio/backend/models/: pipeline.py
pipeline-studio/backend/nodes/: __init__.py  audio_processing.py  audio_sources.py  content_safety_nodes.py  dsp_nodes.py  eval_nodes.py  llm_nodes.py  logic_nodes.py  network_sim.py  speech_nodes.py  telephony_nodes.py
pipeline-studio/backend/realtime/: openai_realtime.py
pipeline-studio/frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
pipeline-studio/frontend/src/: App.tsx  index.css  main.tsx
pipeline-studio/frontend/src/api/: client.ts
pipeline-studio/frontend/src/components/: Canvas.tsx  ConfigPanel.tsx  HistogramPopup.tsx  NodePalette.tsx  Toolbar.tsx  TypedEdge.tsx
pipeline-studio/frontend/src/hooks/: useGraphStore.ts  useKeyboardShortcuts.ts  usePipelineApi.ts
pipeline-studio/frontend/src/nodes/: BaseNode.tsx  nodeTypes.ts
pipeline-studio/frontend/src/utils/: portTypes.ts  staticRegistry.ts  templates.ts  validation.ts
scripts/: bulk_generate_voices.sh  demo_audio.py  download_slurp.py  generate_diagrams_pdf.py  generate_docs_pdf.py  generate_pipeline_diagram.py  generate_test_plan_pdf.py  triage_bench.py  triage_dataset.json  triage_keyword.py
tests/unit/: test_audio_io.py  test_command_match.py  test_echo.py  (+15 more)
(+111 files in other folders)
