[project]
name = "pipeline-studio"
version = "0.1.0"
description = "Visual node-graph pipeline editor for audio LLM testing"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "websockets>=12.0",
    "httpx>=0.27",
    "numpy>=1.24",
    "scipy>=1.11",
    "soundfile>=0.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
